base/src/main/java/com/example/base/error/AppErrors.kt
package com.example.base.error

class NoInternetError : Throwable()
class UnspecifiedError : Throwable()